--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+*.idea/
+*.iml/
 
 ### Eclipse ###
 .apt_generated
@@ -29,6 +31,3 @@ bin/
 .DS_Store
 
 
-*.gitignore
-*.idea
-*.iml
